Introduced MUI headers, improved issue page spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,21 @@
 @import "./fonts.css";
 
+/* Typography */
+
+.MuiTypography-h1 {
+	font-size: 1.7rem;
+	font-weight: 400;
+}
+
+.MuiTypography-h2 {
+	font-size: 1.25rem;
+	font-weight: 400;
+	color: #424242;
+}
+
+
+/* Input elements */
+
 .MuiFormControl-root {
 	margin-top: 1rem;
 }
